2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Test/Test.cs, Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  CSharpBinding.addin.xml, CSharpBinding.mdp, Makefile.am: Migration
	  to Mono.Addins.

2007-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (GetMemberNamePosition): Fixed IEvent
	and IProperty logic and also greatly simplified the overall code.

2007-05-03  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (FindVariableNamePosition): New
	overloaded function to get the offset of a variable name.
	(FindVariableReferences): New.
	(FindParameterReferences): New.
	(Visit): Added logic for matching LocalVariable and IParameters.

2007-05-02  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (RenameClass): Rename all parts of the class
	(in case the class is a partial class).

2007-05-01  Jeffrey Stedfast  <fejj@novell.com>

	* Parser/CodeGenerator.cs (CreateReference): Trim the name to the
	base name (we don't want the FullyQualifiedName). Also do some
	fixing of the offset since the expression start offset begins
	before the name of the type (e.g. it includes
	public/private/etc modifiers).

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Don't copy referenced assemblies.
	* CSharpBindingCompilerManager.cs: Avoid compiler warning.

2007-04-09  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngineStack.cs: If we are pushing
	a new FoldedStatement, we want to indent another level even if our
	parent is a case-statement (unlike what we do for new Blocks).

2007-03-23  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (GetPreviousToken):
	Reimplemented to use GetCharAt().
	(KeyPress): Invalidate engine state if some key-code we don't
	handle changes the buffer before our cursor position.

2007-03-21  Ankit Jain  <jankit@novell.com>

	* Gui/CSharpTextEditorExtension.cs (HandleCodeCompletion): Handle